manifests/mongo-bitnami-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mongo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongo
    spec:
      containers:
      - image: bitnami/mongodb:latest
        name: mongo
        ports:
        - containerPort: 27017
      restartPolicy: Always
      serviceAccountName: ""
