manifests/dhbw_sem-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: dhbw_sem
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/dhbw_sem: "true"
  podSelector:
    matchLabels:
      io.kompose.network/dhbw_sem: "true"
